syntax = "proto3";

message client_request {
	oneof submessage {
		get_server_info_request gsir = 1;
	}
}

message server_response {
	oneof submessage {
		get_server_info_response gsir = 1;
	}
}

message get_server_info_request {
	string magic = 1;
}

message get_server_info_response {
	string pem = 1;
}
